--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -10,8 +10,18 @@
     <string name="nnapi">NNAPI</string>
     <string name="threads">Threads:</string>
     <string name="warning_button_text">OKAY</string>
-    <string name="warning">If you cannot clearly identify a plant and you don’t know if it’s poisonous, we strongly advise against consuming it.</string>
-    <string name="steer_clear">Steer clear from a plant if it has: </string>
+    <string name="warning">If you cannot clearly identify a plant and you don’t know if it’s
+        poisonous, we strongly advise against consuming it.</string>
+    <string name="avoid_these">Avoid Plants that are:</string>
+    <string name="steer_clear">\n
+        &#8226; Milky or discolored sap \n
+        &#8226; Spines, fine hairs, or thorns\n
+        &#8226; Beans, bulbs, or seeds inside pods\n
+        &#8226; Bitter or soapy taste\n
+        &#8226; Dill, carrot, parsnip, or parsley-like foliage\n
+        &#8226; “Almond” scent in the woody parts and leaves\n
+        &#8226; Grain heads with pink, purplish, or black spurs\n
+        &#8226; Three-leaved growth pattern</string>
 
     <string name="model">Model:</string>
     <string-array name="models">
